// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons/Backgrounds story 1 1`] = `
<span
  style="color: white"
>
  You should be able to switch backgrounds for this story
</span>
`;

exports[`Storyshots Addons/Backgrounds story 2 1`] = `
<span
  style="color: white"
>
  This one too!
</span>
`;
